--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -1,4 +1,4 @@
-ylicense_title = Lizenzen
-ylicense_main = Übersicht über gefundene Lizenzen
+license_title = Lizenzen
+license_main = Übersicht über gefundene Lizenzen
 
-ylicense_main_title = Lizenzen
+license_main_title = Lizenzen
